# fastsetup_ubuntu

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  cz.toml  fastsetup_ubuntu.sh  hello.py  pyproject.toml
