[project]
name = "faststeup_ubuntu"
version = "0.0.0"
description = "A script to set up a fast and efficient development environment on Ubuntu."
authors = [
    { name = "Marlos Ribeiro", email = "marlos.mgrb@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "commitizen>=4.6.0",
    "cz-conventional-gitmoji>=0.7.0",
    "pre-commit>=4.2.0",
]
